# Comma-Panda-MCP

./: .gitignore  README.md  claude.json  pyproject.toml
firmware/: panda_h7.bin.signed
scripts/: controller_test.py  flash_panda.py  panda_info.py  steer_and_acc_test.py  steer_test.py
src/panda_mcp/: __init__.py  analysis.py  crc.py  device.py  model.py  server.py  session.py
tests/: test_smoke.py
