[project]
name = "panda-mcp"
version = "0.1.0"
description = "MCP server for reverse-engineering CAN frames with a comma.ai Panda (Red)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
# Hardware support. Without this the server runs in mock mode only.
panda = ["pandacan>=0.0.10"]
dev = ["pytest>=8.0"]

[project.scripts]
panda-mcp = "panda_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panda_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
